[package]
name = "multipart-example"
version = "0.1.0"
authors = ["alexgnatrow <lesha.gnat@gmail.com>"]
build= "build.rs"
edition = "2018"

[dependencies]
actix-web = "1.0.0-rc"
actix-files = "0.1.0-beta.4"
actix-multipart = "0.1.0"
log = "0.4.0"
env_logger = "0.6.0"
serde="1"
serde_derive="1"
serde_json="1.0.38"
futures="*"